include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}/open_ssl
	${CMAKE_CURRENT_SOURCE_DIR}/lib
)

add_definitions(
	-DALLOW_ZERO_PASSWORD
	-DCRYPTKIT_CSP_ENABLE
	-DCK_SECURITY_BUILD
	-DASC_CSP_ENABLE
)

add_library(libsecurity_apple_csp OBJECT
	lib/pkcs12Derive.cpp
	open_ssl/misc/rc2_skey.c
	open_ssl/bn/bn_exp.c
	open_ssl/rsa/rsa_pk1.c
	lib/SHA1_MD5_Object.cpp
	open_ssl/dh/dh_lib.c
	lib/cryptkitcsp.cpp
	open_ssl/bn/bn_gcd.c
	open_ssl/dh/dh_err.c
	open_ssl/bn/bn_blind.c
	open_ssl/buffer/buf_err.c
	open_ssl/buffer/buffer.c
	lib/DH_utils.cpp
	lib/miscAlgFactory.cpp
	open_ssl/bn/bn_asm.c
	lib/FEEKeys.cpp
	open_ssl/dsa/dsa_sign.c
	lib/gladmanContext.cpp
	lib/BlockCryptor.cpp
	lib/RSA_DSA_signature.cpp
	open_ssl/bn/bn_recp.c
	open_ssl/bn/bn_sqr.c
	lib/RSA_DSA_utils.cpp
	lib/FEECSPUtils.cpp
	open_ssl/dsa/dsa_err.c
	open_ssl/misc/rc5_enc.c
	open_ssl/bn/bn_prime.c
	lib/aescsp.cpp
	lib/bsafeAsymmetric.cpp
	open_ssl/bf/bf_ecb.c
	lib/HMACSHA1.c
	open_ssl/rsa/rsa_ssl.c
	lib/bsafeKeyGen.cpp
	lib/DH_keys.cpp
	open_ssl/bn/bn_shift.c
	open_ssl/bn/bn_mpi.c
	open_ssl/bn/bn_mul.c
	open_ssl/dh/dh_gen.c
	lib/RSA_asymmetric.cpp
	open_ssl/rsa/rsa_chk.c
	lib/MacContext.cpp
	lib/MD2Object.cpp
	lib/vRijndael-alg-ref.c
	lib/AppleCSPContext.cpp
	open_ssl/dsa/dsa_asn1.c
	lib/boxes-ref.c
	open_ssl/opensslUtils/opensslUtils.cpp
	lib/deriveKey.cpp
	lib/rc2Context.cpp
	lib/opensshWrap.cpp
	lib/SHA2_Object.cpp
	open_ssl/bn/bn_print.c
	lib/rijndaelApi.c
	lib/DigestContext.cpp
	open_ssl/misc/rc5_skey.c
	open_ssl/lhash/lhash.c
	open_ssl/dh/dh_key.c
	open_ssl/err/err.c
	lib/AppleCSPKeys.cpp
	open_ssl/mem.c
	lib/FEEAsymmetricContext.cpp
	lib/miscalgorithms.cpp
	lib/DH_exchange.cpp
	lib/YarrowConnection.cpp
	open_ssl/bn/bn_mont.c
	lib/wrapKey.cpp
	lib/SignatureContext.cpp
	lib/opensshCoding.cpp
	open_ssl/dsa/dsa_gen.c
	lib/RSA_DSA_csp.cpp
	lib/bfContext.cpp
	lib/desContext.cpp
	open_ssl/misc/rc2_cbc.c
	open_ssl/bn/bn_rand.c
	open_ssl/dh/dh_check.c
	lib/AppleCSP.cpp
	open_ssl/dsa/dsa_lib.c
	open_ssl/bio/bio_lib.c
	open_ssl/ex_data.c
	open_ssl/dsa/dsa_key.c
	open_ssl/bn/bn_lib.c
	open_ssl/bf/bf_skey.c
	open_ssl/rsa/rsa_lib.c
	lib/AppleCSPBuiltin.cpp
	lib/ascContext.cpp
	open_ssl/bio/bss_file.c
	open_ssl/err/err_prn.c
	open_ssl/rsa/rsa_none.c
	open_ssl/cryptlib.c
	lib/DH_csp.cpp
	open_ssl/bn/bn_exp2.c
	lib/RSA_DSA_keys.cpp
	lib/bsafePKCS1.cpp
	lib/AppleCSPUtils.cpp
	open_ssl/rsa/rsa_err.c
	lib/castContext.cpp
	lib/pkcs8.cpp
	lib/wrapKeyCms.cpp
	open_ssl/bn/bn_err.c
	open_ssl/opensslUtils/opensslAsn1.cpp
	open_ssl/bn/bn_add.c
	lib/rc4Context.cpp
	lib/bsafeContext.cpp
	lib/FEESignatureObject.cpp
	open_ssl/dsa/dsa_vrf.c
	open_ssl/bn/bn_word.c
	lib/rijndael-alg-ref.c
	lib/memory.cpp
	lib/pbkdDigest.cpp
	lib/rc5Context.cpp
	lib/pbkdf2.c
	lib/cspdebugging.c
	open_ssl/rsa/rsa_eay.c
	open_ssl/rsa/rsa_gen.c
	lib/bsafeSymmetric.cpp
	open_ssl/stack/stack.c
	open_ssl/bn/bn_ctx.c
	open_ssl/rsa/rsa_sign.c
	open_ssl/rsa/rsa_null.c
	open_ssl/bf/bf_enc.c
	open_ssl/rsa/rsa_saos.c
	lib/algmaker.cpp
	open_ssl/bn/bn_div.c
	open_ssl/dsa/dsa_ossl.c
)
make_fat(libsecurity_apple_csp)
