include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}/lib
	${CMAKE_CURRENT_SOURCE_DIR}/libDER
)

add_library(libsecurity_keychain OBJECT
	lib/ACL.cpp
	lib/Access.cpp
	lib/CCallbackMgr.cp
	lib/Certificate.cpp
	lib/CertificateRequest.cpp
	lib/CertificateValues.cpp
	lib/DLDBListCFPref.cpp
	lib/DynamicDLDBList.cpp
	lib/ExtendedAttribute.cpp
	lib/Globals.cpp
	lib/Identity.cpp
	lib/IdentityCursor.cpp
	lib/Item.cpp
	lib/KCCursor.cpp
	lib/KCEventNotifier.cpp
	lib/KCUtilities.cpp
	lib/KeyItem.cpp
	lib/Keychains.cpp
	lib/Password.cpp
	lib/Policies.cpp
	lib/PolicyCursor.cpp
	lib/PrimaryKey.cpp
	lib/SecACL.cpp
	lib/SecAccess.cpp
	lib/SecBase.cpp
	lib/SecBase64P.c
	lib/SecCFTypes.cpp
	lib/SecCertificate.cpp
	lib/SecCertificateBundle.cpp
	lib/SecCertificateP.c
	lib/SecCertificateRequest.cpp
	lib/SecExport.cpp
	lib/SecExternalRep.cpp
	lib/SecFDERecoveryAsymmetricCrypto.cpp
	lib/SecFrameworkP.c
	lib/SecIdentity.cpp
	lib/SecIdentitySearch.cpp
	lib/SecImport.cpp
	lib/SecImportExport.c
	lib/SecImportExportAgg.cpp
	lib/SecImportExportCrypto.cpp
	lib/SecImportExportOpenSSH.cpp
	lib/SecImportExportPem.cpp
	lib/SecImportExportPkcs8.cpp
	lib/SecImportExportUtils.cpp
	lib/SecItem.cpp
	lib/SecItemConstants.c
	lib/SecKey.cpp
	lib/SecKeychain.cpp
	lib/SecKeychainAddIToolsPassword.cpp
	lib/SecKeychainItem.cpp
	lib/SecKeychainItemExtendedAttributes.cpp
	lib/SecKeychainSearch.cpp
	lib/SecNetscapeTemplates.cpp
	lib/SecPassword.cpp
	lib/SecPkcs8Templates.cpp
	lib/SecPolicy.cpp
	lib/SecPolicySearch.cpp
	lib/SecRandom.c
	lib/SecRecoveryPassword.c
	lib/SecTrust.cpp
	lib/SecTrustOSXEntryPoints.cpp
	lib/SecTrustSettings.cpp
	lib/SecTrustedApplication.cpp
	lib/SecWrappedKeys.cpp
	lib/StorageManager.cpp
	lib/TokenLogin.cpp
	lib/Trust.cpp
	lib/TrustAdditions.cpp
	lib/TrustItem.cpp
	lib/TrustRevocation.cpp
	lib/TrustSettings.cpp
	lib/TrustSettingsUtils.cpp
	lib/TrustStore.cpp
	lib/TrustedApplication.cpp
	lib/UnlockReferralItem.cpp
	lib/cssmdatetime.cpp
	lib/defaultcreds.cpp
	lib/tsaDERUtilities.c
)
make_fat(libsecurity_keychain)

add_library(libsecurity_keychain_DER OBJECT
	libDER/libDER/DER_Decode.c
	libDER/libDER/DER_Encode.c
	libDER/libDER/DER_Keys.c
	libDER/libDER/DER_Digest.c
	libDER/libDER/oids.c
	libDER/libDER/DER_CertCrl.c
)
make_fat(libsecurity_keychain_DER)
