include_directories(
	${CMAKE_CURRENT_SOURCE_DIR}/lib
)

add_library(libsecurity_utilities OBJECT
	lib/cfmach++.cpp
	lib/hashing.cpp
	lib/devrandom.cpp
	lib/headermap.cpp
	lib/pcsc++.cpp
	lib/ccaudit.cpp
	lib/cfmunge.cpp
	lib/url.cpp
	lib/seccfobject.cpp
	lib/superblob.cpp
	lib/dyldcache.cpp
	lib/buffers.cpp
	lib/simpleprefs.cpp
	lib/logging.cpp
	lib/threading.cpp
	lib/tqueue.cpp
	lib/timeflow.cpp
	lib/trackingallocator.cpp
	lib/utilities.cpp
	lib/machserver.cpp
	lib/cfutilities.cpp
	lib/mach_notify.c
	lib/crc.c
	lib/hosts.cpp
	lib/sqlite++.cpp
	lib/dispatch.cpp
	lib/selector.cpp
	lib/inetreply.cpp
	lib/fdsel.cpp
	lib/fdmover.cpp
	lib/socks++4.cpp
	lib/FileLockTransaction.cpp
	lib/socks++5.cpp
	lib/blob.cpp
	lib/typedvalue.cpp
	lib/ip++.cpp
	lib/errors.cpp
	lib/endian.cpp
	lib/transactions.cpp
	lib/unix++.cpp
	lib/coderepository.cpp
	lib/iodevices.cpp
	lib/alloc.cpp
	lib/vproc++.cpp
	lib/muscle++.cpp
	lib/adornments.cpp
	lib/debugging_internal.cpp
	lib/streams.cpp
	lib/cfclass.cpp
	lib/mach++.cpp
	lib/unixchild.cpp
	lib/CSPDLTransaction.cpp
	lib/macho++.cpp
	lib/bufferfifo.cpp
	lib/socks++.cpp
	lib/osxcode.cpp
	lib/globalizer.cpp
	lib/powerwatch.cpp
	lib/daemon.cpp
	lib/machrunloopserver.cpp
	lib/kq++.cpp
)
make_fat(libsecurity_utilities)
